--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,5 +5,15 @@
   "types": "dist/index.d.ts",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "date-fns": "^2.16.1",
+    "react": "^17.0.1"
+  },
+  "devDependencies": {
+    "@types/date-fns": "^2.6.0",
+    "@types/jest": "^26.0.15",
+    "@types/react": "^17.0.0",
+    "jest": "^26.6.3"
   }
 }
