--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -8,9 +8,14 @@
   },
   "scripts": {
     "clean": "rimraf dist *.tsbuildinfo",
-    "build": "tsc -b ."
+    "build": "tsc -b .",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.3",
     "typescript": "^4.0.3"
   }
 }
